--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,6 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - run: jupytext --to py:percent Lemon-PD-Faces.ipynb
+      - run:  ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
