--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: jupytext --to py:percent *.ipynb
-      - run:  ls ${{ github.workspace }}
+      - run:  ls ${{ github.workspace }}/try
       - run: echo "🍏 This job's status is ${{ job.status }}."
