--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: jupytext --to py:percent *.ipynb
+      - run: find . -maxdepth 10 -name \*.ipynb -exec jupytext --to py:percent {} \;
       - run:  ls ${{ github.workspace }}/try
       - run: echo "🍏 This job's status is ${{ job.status }}."
